--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,6 +7,30 @@
 </head>
 <body>
     <h1>Chicago Deep-Dish Pizza Muffins</h1>
+        <img src = "https://www.allrecipes.com/thmb/S9tQmL622cGIM_NOvG5NsWtombE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8331294-chicago-deep-dish-pizza-muffins-VAT-hero-4x3-24c7c93a321444ca9be115c0d90a9fa9.jpg" alt = "An image of pizza muffins">
+        <h2>Description of the recipe</h2>
+            <p>This recipe details how to make the pizza muffins, which were originally created in Chicago. They can be held in your hand, just like normal pizza and can serve as a late night snack!! Who doesn't love pizza? The crust is fully customisable and you can alter the recipe to suit your cravings. To know you have completed the recipe correctly, the sauce and cheese char will have a slight char on the outside as they bake, resulting in a savoury taste!</p>
+            <h3>Ingredients</h3>
+                <ul>
+                    <li>2x tablespoons of Olive Oil</li>
+                    <li>1x cold packaged prepared pizza dough</li>
+                    <li>120g provolone cheese (diced)</li>
+                    <li>120g mozzarella cheese (grated)</li>
+                    <li>1/2 cup of your chosen prepared pizza sauce</li>
+                    <li>3/4 cup of freshly grated Parmigiano-Reggiano cheese</li>
+                    <li>Any other toppings/fillings your heart desires</li>
+                </ul>
+            <h3>Steps</h3>    
+                <ol>
+                    <li>Gather all ingredients. Preheat the oven to 200 degrees celsuis and generously grease a 12-cup standard muffin pan with 2 teaspoons oil.</li>
+                    <li>Roll dough on a lightly floured surface to a thickness of 1/8 inch. Pick it up from the edges to make sure it's not stuck to the surface, then cut out twelve 4-inch circles. Reroll the dough to cut all 12 circles if necessary.</li>
+                    <li>Place each circle into a prepared muffin cup, making sure it's centered. Press and push dough up the sides of the cups, getting close to, but not all the way up to the top. When all circles have been placed in the muffin pan, go around one more time to push and press on each one.</li>
+                    <li>Put 1 tablespoon provolone cheese into each cup, followed by any chosen toppings/fillings</li>
+                    <li>Lightly press on the fillings to compress, then top with 1 rounded tablespoon mozzarella cheese and 2 tablespoons pizza sauce, pushing the sauce down gently into the fillings; it's okay that the fillings will be slightly higher than the pan. Sprinkle Parmigiano-Reggiano cheese generously over top.</li>
+                    <li>Bake in the upper center of the preheated oven until the tops are beautifully browned, 30 to 35 minutes.</li>
+                    <li>Remove from the oven and cool in the pan for 10 to 15 minutes. Go around the edge of each muffin with a knife, then use a fork or small spatula to remove from the pan.</li>
+                    <li>Let them cool on a rack for a few minutes, then garnish with parsley and serve.</li>
+                </ol>
     <a href="../index.html">Homepage</a>
 </body>
 </html>
