Add other two recipes and link them back to the homepage
This commit updates the homepage with our three recipes as well as creating the peri peri chicken and tofu stir fry recipes.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Chicago Deep-Dish Pizza Muffins</a>
+        <ul>
+            <li><a href="recipes/pizza.html">Chicago Deep-Dish Pizza Muffins</a></li>
+            <li><a href="recipes/chicken.html">Peri Peri Chicken</a></li>
+            <li><a href="recipes/tofu-sf.html">Tofu Stir-Fry</a></li>
+        </ul>
 </body>
 </html>
 
